[package]
name = "luca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.8.0"
relm4-components = "0.8.0"
granite = { version = "1.1", package = "granite-rs", features = ["v7_2"] }

[build-dependencies]
glib-build-tools = "0.17.10"